[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/sub_theme.tres" type="Theme" id=1]
[ext_resource path="res://themes/tutorial_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/components/tutorial_box.gd" type="Script" id=3]

[node name="Panel" type="Panel"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 260.0
margin_bottom = 210.0
rect_min_size = Vector2( 250, 200 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Panel" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
margin_right = 230.0
margin_bottom = 156.0
focus_mode = 2
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "a
a
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
a
a
a"
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 160.0
margin_right = 230.0
margin_bottom = 180.0

[node name="Prev" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 20.0
text = "PREVIOUS"

[node name="Spacing" type="Control" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 124.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 172.0
margin_bottom = 20.0
text = "NEXT"

[node name="Spacing2" type="Control" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 186.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="Skip" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 230.0
margin_bottom = 20.0
text = "SKIP"

[node name="Frame" type="ReferenceRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.996078 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false

[connection signal="resized" from="Panel" to="." method="_on_Panel_resized"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Skip" to="." method="_on_Skip_pressed"]
